added forgot password form

--- a/DLivr/src/app/pages/login/login.page.html
+++ b/DLivr/src/app/pages/login/login.page.html
@@ -41,7 +41,7 @@
         </div>
 
 
-        <a routerLink = "#"> Forgot your password? </a>
+        <a (click)= "forgotPasswordAlert()"> Forgot your password? </a>
 
         
 
