--- a/DLivr/src/app/pages/payment/payment.page.html
+++ b/DLivr/src/app/pages/payment/payment.page.html
@@ -11,24 +11,46 @@
     
   <ion-button id="addCard" (click)="go()" expand="full" fill="clear" >Add Card</ion-button>
 
+
+  <!-- add a card form -->
+  <!-- /////////////////////////////////////////////////////////// -->
+
+  <form novalidate #cardsForm="ngForm" (ngSubmit)="saveCard(cardsForm)" >
+    <!-- cardsForm is a variable that holds a reference to the form 
+         ngForm directive suppliments the form with all the properties such as dirty, touched etc
+         that directive gives us the access to the value of the form
+    -->
+
   <div id="formular">
     <h6>Enter card details</h6>
 <ion-grid>
     <ion-row>
       <ion-col>
-          <ion-input id="cardNumber" placeholder="Card Number">
+          <ion-input id="cardNumber" required  #cardNr="ngModel" placeholder="Card Number" [(ngModel)]="cardModel.cardNumber" name="cardNumber">
+            <!-- we use banana in a boc [()] for two way bingind data from the class to view, and from the view to class
+                 and with two way binding we have the ngModel and Angular sync 
+                 pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$"
+                -->
             <ion-icon name="card"></ion-icon> 
            </ion-input> 
+           <!-- <div *ngIf="cardNr.errors && (cardNr.invalid || cardNr.touched)">
+              <small  style="color:rgb(233, 0, 0);" *ngIf="cardNr.errors.required">Card number is required</small>
+              <small  style="color:rgb(233, 0, 0);" *ngIf="cardNr.errors.pattern">Card number is incorrect</small>
+           </div> -->
       
       </ion-col>
     </ion-row>
+    <!-- {{cardNr.valid}}
+         {{cardNr.pristine}}  -->
     <ion-row>
         <ion-col>
-            <ion-input id="date" placeholder="MM/YY" ></ion-input>  
+            <ion-input id="mm" placeholder="MM" required [(ngModel)]="cardModel.mm" name="mounth" ></ion-input>  
           </ion-col>
           <ion-col>
-            <ion-input  id="cvv" placeholder="CVV"></ion-input>
-    
+              <ion-input id="yy" placeholder="YY" required [(ngModel)]="cardModel.yy" name="year" ></ion-input>  
+            </ion-col>
+          <ion-col>
+            <ion-input  id="cvv" placeholder="CVV" required [(ngModel)]="cardModel.cvv" name="cvv"></ion-input>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -38,14 +60,10 @@
           <ion-icon name="flag"></ion-icon>
         </div>
         <div class="inline">
-          <ion-select  id="country" placeholder="Country">
+          <ion-select  id="country" required placeholder="Country" [(ngModel)]="cardModel.country" name="country">
 
-          <ion-select-option >Holland</ion-select-option>
-          <ion-select-option >Portugal</ion-select-option>
-          <ion-select-option >Romania</ion-select-option>
-          <ion-select-option >Ungary</ion-select-option>
-          <ion-select-option >USA</ion-select-option>
-          
+          <ion-select-option *ngFor="let country of countries">{{country}}</ion-select-option>
+    
           </ion-select>
       </div>
               </ion-col>
@@ -53,7 +71,7 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <ion-input id="zipcode" placeholder="Zip Code"></ion-input>
+                <ion-input id="zipcode" required placeholder="Zip Code" [(ngModel)]="cardModel.zipCode" name="zipcode"></ion-input>
             </ion-col>
           </ion-row>
           <ion-row>
@@ -64,7 +82,7 @@
             </ion-row>
             <ion-row>
                 <ion-col class="centered">
-                    <ion-button id="save" (click)="save()"  fill="clear" >Save</ion-button>
+                    <ion-button id="save" [disabled]="cardsForm.form.invalid" type = "submit" value="Add Card" fill="clear" >Save</ion-button>
                     <ion-button id="cancel" (click)="cancel()"  fill="clear" >Cancel</ion-button>
                 </ion-col>
 
@@ -73,17 +91,31 @@
   </ion-grid>
 
   </div>
-<br/>
-<br/>
-<br/>
+</form>
 
- <div id="edit">
-    <ion-button id="delete"  expand="full" fill="clear" >Delete</ion-button>
-    <ion-button id="cancelEdit"  expand="full" fill="clear" >Cancel</ion-button>
- </div> 
+
+<!-- {{cardsForm.value | json}} -->
+
+<br/>
+<br/>
+<!-- <br/> -->
  
   <div id="cards">
- 
+    <ion-grid id ="myCards">
+      <ion-row>
+        <ion-col id = "cardList">
+          <div *ngFor = "let card of cards" >
+         
+            <ion-item  id="cardListItem" lines="none" color="blue">
+              <p >  {{card.cardNumber}} </p>
+              <ion-icon id="trash" slot="end" (click)="deleteCardd(card.cardNumber)" size="small" name="trash"></ion-icon>
+             </ion-item>
+    
+            </div>
+  
+         </ion-col>
+       </ion-row>
+       </ion-grid>  
   </div>
     
   </ion-content>
