added settings page

--- a/DLivr/src/app/pages/help/help.page.scss
+++ b/DLivr/src/app/pages/help/help.page.scss
@@ -1,17 +1,15 @@
+$green-color: rgb(78, 238, 91);
+
 ion-toolbar {
     --ion-background-color:  rgb(46, 46, 46);
 }
 
+
 ion-title {
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    font-weight: bolder;
-    color: gray;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bolder;
+  color: gray;
 }
 
-@media only screen and (max-width: 600px) {
-    ion-title {
-      padding-right: 15%;
-    }
-  }
