--- a/DLivr/src/app/pages/welcome/welcome.page.html
+++ b/DLivr/src/app/pages/welcome/welcome.page.html
@@ -16,27 +16,32 @@
   <h1 id="title"> Welcome to D-Livr!</h1>
   <h2 id="subtitle"> As a client or as a driver,<br>use our service to benefit us all!</h2>
 
-<ion-card style="max-width: 500px; --background: rgb(255, 255, 255);">
-    <ion-item  style="margin-top: 10px; color:white ;max-width: 500px;--background: rgb(54, 54, 54);">
-      <ion-icon name="car" color="light" slot="start"></ion-icon>
-      <ion-label style="font-weight: 300;">Want to drive and deliver?</ion-label>
-    </ion-item>
-  
-    <ion-card-content style="color:black;">
-      Sign Up for an account and jump straight into delivering packages around your area. Only need a car, time and a credit card connected to start making loads of money, pal!
-    </ion-card-content>
-  </ion-card>
+  <div id = "cardsMiddle" >   
+    <ion-row justify-content-center align-items-center style="height: 100%" > 
 
-  <ion-card style="max-width: 500px; --background: rgb(255, 255, 255);">
-      <ion-item  style="margin-top: 10px; color:white ;max-width: 500px;--background: rgb(54, 54, 54);">
-        <ion-icon name="cube" color="light" slot="start"></ion-icon>
-        <ion-label style="font-weight: 300;">Want to get your package delivered?</ion-label>
+    <ion-card style="max-width: 500px; --background: rgb(255, 255, 255);">
+      <ion-item  style="margin-top: 10px; color:white; max-width: 500px;--background: rgb(54, 54, 54);">
+        <ion-icon name="car" color="light" slot="start"></ion-icon>
+        <ion-label style="font-weight: 300;">Want to drive and deliver?</ion-label>
       </ion-item>
     
       <ion-card-content style="color:black;">
-        Sign Up for an account and start finding drivers in an instant to get your packages delivered as fast as today!! Even better, we assure your packages will be delivered, as your driver can't do nada withoud his dmn code..
+        Sign Up for an account and jump straight into delivering packages around your area. Only need a car, time and a credit card connected to start making loads of money, pal!
       </ion-card-content>
     </ion-card>
+  
+    <ion-card style="max-width: 500px; --background: rgb(255, 255, 255);">
+        <ion-item  style="margin-top: 10px; color:white ;max-width: 500px;--background: rgb(54, 54, 54);">
+          <ion-icon name="cube" color="light" slot="start"></ion-icon>
+          <ion-label style="font-weight: 300;">Want to get your package delivered?</ion-label>
+        </ion-item>
+        <ion-card-content style="color:black;">
+          Sign Up for an account and start finding drivers in an instant to get your packages delivered as fast as today!! Even better, we assure your packages will be delivered, as your driver can't do nada withoud his dmn code..
+        </ion-card-content>
+
+    </ion-card>
+    </ion-row> 
+    </div>
 
     <h2 id="subtitle"> Two services, one account!</h2>
 
