--- a/DLivr/src/app/pages/settings/settings.page.scss
+++ b/DLivr/src/app/pages/settings/settings.page.scss
@@ -10,8 +10,18 @@ ion-title {
   color: gray;
 }
 
+
+ion-card {
+width: 100%;
+
+}
+
 @media only screen and (max-width: 600px) {
   ion-title {
     padding-right: 15%;
+  }
+
+  ion-card {
+    width: 100%
   }
 }
