fixed welcome text

--- a/DLivr/src/app/pages/welcome/welcome.page.html
+++ b/DLivr/src/app/pages/welcome/welcome.page.html
@@ -36,7 +36,7 @@
           <ion-label style="font-weight: 300;">Want to get your package delivered?</ion-label>
         </ion-item>
         <ion-card-content style="color:black;">
-          Sign Up for an account and start finding drivers almost instantly to get your packages delivered as fast as possible! Even better, we assure your packages will be delivered, as every driver has a rating that will stick on his profile and can't be unseen.
+          Sign Up for an account and start finding drivers almost instantly to get your packages delivered as fast as possible! Even better, we assure your packages will be delivered.
         </ion-card-content>
 
     </ion-card>
