--- a/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.html
+++ b/DLivr/src/app/pages/mypackagesdriver/mypackagesdriver.page.html
@@ -128,7 +128,7 @@
            </ion-label>
           </ion-item>
 
-          <ion-button id="markAsDeliveredButton" color = "success" (click)="markPackageAsDelivered()" type = "submit"  expand="block">Mark as delivered</ion-button>
+          <ion-button id="markAsDeliveredButton" color = "success" (click)="markPackageAsDelivered(package.id)" type = "submit"  expand="block">Mark as delivered</ion-button>
           <!-- <ion-button id="cancelButton" color ="red" (click)="cancelPackage()" type = "submit" expand="block"> Cancel </ion-button>   -->
          
         </ion-card-content>
